# spec-oracle

./: .envrc.example  .gitignore  ACHIEVEMENTS.md  CLAUDE.md  Cargo.toml  PROBLEM.md  README.md  SESSION_100_SUMMARY.md  connect_layers.py
.claude/: claude-loop.state.json
.spec/: .gitignore  README.md  edges.yaml  spec-graph.dot  specs.json  specs.json.backup  specs.json.backup-session62  specs.json.broken
docs/: concepts.md  conversation.md  motivation.md  specifications.md  versioning.md
examples/: password_validation.rs
paper/: README.md
proto/: spec_oracle.proto
scripts/: README.md  analyze_all_isolated.py  analyze_isolated_specs.py  analyze_remaining_isolated.py  analyze_similarity.py  assign_layers.py  cleanup_example_password_specs.py  cleanup_malformed_invariants.py  connect_final_four.py  connect_graph_storage_spec.py  connect_isolated_proto_rpc.py  connect_isolated_proto_rpcs.py  connect_isolated_real_specs.py  connect_isolated_specs.py  connect_layer_label_spec.py  connect_lifecycle_check_specs_v2.py  connect_readme_specs.py  connect_remaining_isolated.py  connect_remaining_proto_rpc.py  connect_scenarios.py  connect_session_119_specs.py  connect_test_specs.py  connect_trace_scenario.py  connect_trace_to_assertion.py  connect_u0_u3.py  count_isolated_by_kind.py  deduplicate_specs.py  export_specs_dot.py  export_specs_md.py  fix_edges.py  fix_formality_layer_code.py  fix_layer_display.py  mark_extractor_test_examples.py  (+8 more)
spec-cli/: Cargo.toml  build.rs
spec-cli/src/: main.rs  main.rs.backup  utils.rs
spec-cli/src/commands/: add.rs  api.rs  check.rs  contradictions.rs  dispatcher.rs  export_dot.rs  extract.rs  find.rs  init.rs  layer.rs  lifecycle.rs  migrate.rs  mod.rs  omissions.rs  prover.rs  query.rs  relationships.rs  summary.rs  trace.rs  u0.rs  watch.rs
spec-cli/src/persistence/: mod.rs  store_router.rs
spec-cli/src/presentation/: formatter.rs
spec-core/: Cargo.toml
spec-core/src/: ai_semantic.rs  extract.rs  graph.rs  lib.rs  prover.rs  store.rs  udaf.rs
spec-core/src/prover/: mod.rs  z3_backend.rs
specd/: Cargo.toml
specd/src/: main.rs  service.rs
(+839 files in other folders)
