[workspace]
members = ["spec-core", "specd", "spec-cli"]
resolver = "2"

[workspace.dependencies]
tonic = "0.12"
tonic-build = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["full"] }
petgraph = { version = "0.7", features = ["serde-1"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
notify = "6.1"
z3 = "0.12"
