[package]
name = "spec-core"
version = "0.1.0"
edition = "2024"

[dependencies]
petgraph = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
z3 = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3.8"

[features]
default = ["z3-solver"]
z3-solver = ["z3"]
