[package]
name = "specd"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "specd"
path = "src/main.rs"

[dependencies]
spec-core = { path = "../spec-core" }
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
